--- a/HierarchialDet-InitialPhase-Docker/Dockerfile
+++ b/HierarchialDet-InitialPhase-Docker/Dockerfile
@@ -29,6 +29,7 @@ RUN pip install -U openmim && mim install mmengine && mim install "mmcv>=2.0.0" 
 
 #COPY --chown=user:user detectron2 /opt/app/detectron2
 #COPY --chown=user:user hierarchialdet /opt/app/hierarchialdet
+COPY --chown=user:user diffusiondet /opt/app/diffusiondet
 COPY --chown=user:user configs /opt/app/configs
 COPY --chown=user:user test /input/test
 #COPY --chown=user:user pretrained_model /opt/app/pretrained_model
